Dateien im Fatjarmodus aus Classloader laden